Fix alignment on progress bar.

--- a/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
+++ b/framebuzz/static/framebuzz/player/app/sass/sass/screen.scss
@@ -106,7 +106,7 @@ object, embed, video, iframe {
                     width: 640px;
 
                     div.mejs-time-rail {
-                        bottom: -16.5px;
+                        bottom: -12px;
                         float: none;
                         height: 6px;
                         padding-top: 0;
